<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="449dp"
        android:fontFamily="@font/berkshire_swash"
        android:gravity="center"
        android:text="@string/compass"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/check_restaurants"
        android:layout_width="134dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="216dp"
        android:fontFamily="@font/chewy"
        android:text="@string/wanna_know_restaurants"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/food_image_view"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="125dp"
        android:contentDescription="@string/restaurant_button"
        app:srcCompat="@drawable/restauranticondef" />


</RelativeLayout>