<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:id="@+id/rel_lay"
            android:paddingTop="15dp"
            android:orientation="vertical"
            android:background="@drawable/shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/restaurantName"
                android:paddingStart="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_name"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/restaurantAddress"
                android:textSize="18sp"
                android:paddingStart="12dp"
                android:layout_below="@id/restaurantName"
                android:text="@string/rest_address"
                android:textStyle="italic"
                android:paddingTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="39dp"
                android:layout_below="@id/restaurantAddress"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_starr"
                android:contentDescription="@string/rating" />

            <TextView
                android:id="@+id/restaurantRating"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_below="@+id/restaurantAddress"
                android:layout_centerInParent="true"
                android:layout_marginStart="-12dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/imageView"
                android:paddingStart="8dp"
                android:text="@string/rating"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:ignore="RtlSymmetry" />


        </RelativeLayout>



    </androidx.cardview.widget.CardView>

</LinearLayout>